--- a/config.example.json
+++ b/config.example.json
@@ -14,10 +14,12 @@
   "_comment2": "客户端配置示例",
   "local_config": {
     "local_addr": "127.0.0.1:1080",
+    "http_proxy_addr": "127.0.0.1:8080",
     "server": "your-server.com:8081",
     "password": "your-strong-password-here",
     "timeout": 30,
     "log_level": "info",
-    "obfuscate": true
+    "obfuscate": true,
+    "auto_proxy": true
   }
 }
